@@ -542,10 +542,8 @@ STATES has been changed. STATES may also be a single symbol."
            state-changes)))
 
   (define (rename-window-func window new-name)
-    "Renames the WINDOW to NEW-NAME."
-    (unless (string-match desktop-environment "none")
-        (progn (set-x-text-property window 'WM_NAME (vector new-name))
-	       (set-x-text-property window 'WM_ICON_NAME (vector new-name))))
+      (set-x-text-property window 'WM_NAME (vector new-name))
+      (set-x-text-property window 'WM_ICON_NAME (vector new-name))
       ;; XXX doesn't have any effect?
       (set-x-text-property window '_NET_WM_VISIBLE_NAME (vector new-name))
       (set-x-text-property window '_NET_WM_NAME (vector new-name))
