@@ -68,8 +68,7 @@ now bundled in the new @code{Workspace} sub-menu.
 
 @item @code{rename-window} function behavior-change [Christopher Bratusek]
 The function @code{rename-window} does now also change the _NET_WM_VISIBLE_NAME
-property of a window. Besides the properties WM_NAME and WM_ICON_NAME are now only
-changed, if Ssawfish is not running standalone (either KDE, GNOME or XFCE running).
+property of a window. 
 
 @item Translation related changes [Teika Kazura]
 
