@@ -1,3 +1,6 @@
+2010-10-23  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/windows.jl: remove desktop check from rename-window-func
+
 2010-10-21  Christopher Bratusek <zanghar@freenet.de>
 	* man/news.texi: fixed a typo
 	                 updated
